kubernetes-fundamentals/mealie/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mealie
  name: mealie
  namespace: mealie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie
  template:
    metadata:
      labels:
        app: mealie
    spec:
      containers:
        - image: ghcr.io/mealie-recipes/mealie:v1.3.2
          name: mealie
          ports:
            - containerPort: 9000
          volumeMounts:
          - mountPath: /cache
            name: cache-volume
        - image: nginx
          name: testpod
          volumeMounts:
          - mountPath: /cachetestpod
            name: cache-volume
      volumes:
      - name: cache-volume
        emptyDir:
          sizeLimit: 500Mi
