kubernetes-fundamentals/mealie/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mealie
  name: mealie
  namespace: mealie
spec:
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 9000
    nodePort: 31000
  selector:
    app: mealie
  type: NodePort
