kubernetes-fundamentals/mealie/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie
spec:
  ingressClassName: traefik
  rules:
    - host: mealie.local   # The custom fake domain for your browser
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mealie # Connects to a standard ClusterIP Service
                port:
                  number: 9000
